force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Demo</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>A</fullName>
        <active>true</active>
        <businessProcess>Demo</businessProcess>
        <label>A</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_onyl</fullName>
        <active>true</active>
        <businessProcess>Demo</businessProcess>
        <label>Read onyl</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Demo</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISCHANGED(Type), AND(
$Profile.Name=&quot;CEO user&quot;,
IsClosed=True
))</errorConditionFormula>
        <errorMessage>Closed cases cannot be edited</errorMessage>
    </validationRules>
</CustomObject>